Small addition to my first page

--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>Hello Coursera!</title>
 </head>
 <body>
-	<h1>HELLOOO COURSERA!!</h1>
+	<h1>HELLOOO COURSERA!!.How are you today?</h1>
 </body>
 </html>
